--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
-PAYJP_PRIVATE_KEY = '
-sk_test_b0da9f6a1a1202eca3c198f3'
+PAYJP_PRIVATE_KEY = 'sk_test_b0da9f6a1a1202eca3c198f3'
 PAYJP_KEY = 'pk_test_60016bef2aecfbb50ebb65e4'
